--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -5,4 +5,18 @@ body
 	font-family: $opensans
 	+f(15px, 400, 1.4)
 
+.out
+	display: flex
+.menu,
+.aside,
+.main
+	height: 100vh
 
+.menu
+	width: 223px
+
+.aside
+	width: 400px
+
+.main
+	flex-grow: 1
