--- a/src/templates/partials/components/_menu.html
+++ b/src/templates/partials/components/_menu.html
@@ -1,4 +1,19 @@
 <!-- begin menu -->
 <div class="menu">
+	<div class="profile">
+		<a href="#" class="profile__container">
+			<div class="profile__figure">
+				{{mixins.icon('logo', 'profile__logo')}}
+				<!-- <div class="profile__img" style="background-image: url(img/logo.png);"></div> -->
+			</div>
+			<div class="profile__content">
+				<div class="profile__title">Andrew Eddy</div>
+				<div class="profile__meta">
+					<span>Decatur</span>
+				</div>
+				<div class="profile__status"></div>
+			</div>
+		</a>
+	</div>
 </div>
 <!-- end menu -->
