--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -10,6 +10,7 @@ body
 .menu,
 .aside,
 .main
+	overflow: auto
 	height: 100vh
 
 .menu
@@ -20,3 +21,7 @@ body
 
 .main
 	flex-grow: 1
+
+.title-lg
+	color: #37394C
+	+f(24px, 400, 33px)
