--- a/src/templates/partials/components/_main.html
+++ b/src/templates/partials/components/_main.html
@@ -1,5 +1,48 @@
 <!-- begin main -->
 <div class="main">
-	
+	<div class="main__inner">
+		<div class="main__header">
+			<h2 class="title-lg main__title">Customers</h2>
+			<div class="search main__search">
+				<div class="search__field">
+					<button class="search__btn">
+						{{mixins.icon('search', 'search__icon')}}
+					</button>
+					<input type="text" class="search__input" placeholder="Type name...">
+				</div>
+			</div>
+		</div>
+		<div class="main__body">
+			<div class="table">
+				<div class="table__thead">
+					<div class="table__tr">
+						<div class="table__th" data-column="name">NAME</div>
+						<div class="table__th" data-column="frequency">FREQUENCY</div>
+						<div class="table__th" data-column="address">ADDRESS</div>
+						<div class="table__th" data-column="status">STATUS</div>
+					</div>
+				</div>
+				<div class="table__tbody">
+					{% for item in range(0,9) %}
+						<div class="table__tr table__item">
+							{{mixins.icon('angle-right', 'table__arrow')}}
+							<div class="table__td" data-column="name">
+								<div class="table__img" style="background-image: url(https://placecage.com/100/100);"></div>
+								<div class="table__content">
+									<div class="table__title">Mark Whatsons</div>
+									<div class="table__meta">Los Angeles</div>
+								</div>
+							</div>
+							<div class="table__td" data-column="frequency">Residential</div>
+							<div class="table__td" data-column="address">934 St Charles Ave NE, Atlanta Ga 30306</div>
+							<div class="table__td" data-column="status">
+								<div class="table__status {% if loop.first %}is-error{% endif %}"></div>
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- end main -->
