--- a/src/templates/partials/components/_main.html
+++ b/src/templates/partials/components/_main.html
@@ -24,7 +24,7 @@
 				</div>
 				<div class="table__tbody">
 					{% for item in range(0,9) %}
-						<div class="table__tr table__item">
+						<a href="#" class="table__tr table__item">
 							{{mixins.icon('angle-right', 'table__arrow')}}
 							<div class="table__td" data-column="name">
 								<div class="table__img" style="background-image: url(https://placecage.com/100/100);"></div>
@@ -33,12 +33,19 @@
 									<div class="table__meta">Los Angeles</div>
 								</div>
 							</div>
-							<div class="table__td" data-column="frequency">Residential</div>
-							<div class="table__td" data-column="address">934 St Charles Ave NE, Atlanta Ga 30306</div>
+							<div class="table__td" data-column="frequency">
+								<div class="table__label">FREQUENCY:</div>
+								<div class="table__value">Residential</div>
+							</div>
+							<div class="table__td" data-column="address">
+								<div class="table__label">ADDRESS:</div>
+								<div class="table__value">934 St Charles Ave NE, Atlanta Ga 30306</div>
+							</div>
 							<div class="table__td" data-column="status">
+								<div class="table__label">STATUS:</div>
 								<div class="table__status {% if loop.first %}is-error{% endif %}"></div>
 							</div>
-						</div>
+						</a>
 					{% endfor %}
 				</div>
 			</div>
