add menu profile

--- a/src/sass/components/_profile.sass
+++ b/src/sass/components/_profile.sass
@@ -8,16 +8,17 @@
 		width: 64px
 		height: 64px
 		+vertical
-	&__logo,
-	&__img
+	&__logo
+		font-size: 64px
 		display: inline-block
 		vertical-align: middle
-		background-position: center center
-		background-size: cover
-	&__logo
-		font-size: 46px
 	&__img
 		border-radius: 50%
+		background-position: center center
+		background-size: cover
+	&__content
+		overflow: hidden
+		padding: 10px 0 15px 25px
 	&__title
 		color: $white
 	&__meta
