--- a/src/templates/partials/components/_menu.html
+++ b/src/templates/partials/components/_menu.html
@@ -1,19 +1,26 @@
 <!-- begin menu -->
 <div class="menu">
-	<div class="profile">
+	<div class="profile menu__profile">
 		<a href="#" class="profile__container">
 			<div class="profile__figure">
 				{{mixins.icon('logo', 'profile__logo')}}
 				<!-- <div class="profile__img" style="background-image: url(img/logo.png);"></div> -->
 			</div>
 			<div class="profile__content">
-				<div class="profile__title">Andrew</div>
+				<div class="profile__title is-active">Andrew</div>
 				<div class="profile__meta">
 					<span>Cyrcle</span>
 				</div>
-				<div class="profile__status"></div>
 			</div>
 		</a>
 	</div>
+	<div class="menu__meta">
+		<div class="menu__meta-title">general</div>
+		<a href="#" class="menu__meta-label">Customers</a>
+	</div>
+	<a href="#" class="menu__logout">
+		<span class="menu__logout-label">Logout</span>
+		{{mixins.icon('logout', 'menu__logout-icon')}}
+	</a>
 </div>
 <!-- end menu -->
