--- a/src/sass/components/_main.sass
+++ b/src/sass/components/_main.sass
@@ -40,3 +40,20 @@
 				border-top: 1px solid rgba(#535285, 0.1)
 				border-left: none
 				width: 60px
+	&__footer
+		padding-top: 17px
+		+clr
+		+xs
+			padding-top: 20px
+	&__page
+		padding: 7px 120px
+		color: #849BB0
+		+f(13px, 400, 18px)
+		text-align: center
+		+xs 
+			overflow: hidden
+			padding-right: 20px
+			padding-left: 0
+			text-align: left
+	&__next 
+		float: right
