--- a/src/templates/partials/components/_main.html
+++ b/src/templates/partials/components/_main.html
@@ -50,6 +50,10 @@
 				</div>
 			</div>
 		</div>
+		<div class="main__footer">
+			<button class="btn btn_white-primary btn_sm main__next">Next</button>
+			<div class="main__page">Page 1</div>
+		</div>
 	</div>
 </div>
 <!-- end main -->
