--- a/src/templates/partials/components/_aside.html
+++ b/src/templates/partials/components/_aside.html
@@ -1,5 +1,13 @@
 <!-- begin aside -->
 <div class="aside">
-	
+	<div class="aside__inner">
+		<div class="simple-profile aside__simple-profile">
+			<div class="simple-profile__img" style="background-image: url(httsp://placecage.com/100/100);"></div>
+			<div class="simple-profile__content">
+				<div class="simple-profile__title">Adeline Tate (Residential)</div>
+				<div class="simple-profile__meta">andrew@cyrcle.io</div>
+			</div>
+		</div>
+	</div>
 </div>
 <!-- end aside -->
