--- a/src/templates/partials/components/_aside.html
+++ b/src/templates/partials/components/_aside.html
@@ -2,18 +2,35 @@
 <div class="aside">
 	<div class="aside__inner">
 		<div class="simple-profile aside__simple-profile">
-			<div class="simple-profile__img" style="background-image: url(httsp://placecage.com/100/100);"></div>
+			<div class="simple-profile__img" style="background-image: url(https://placecage.com/100/100);"></div>
 			<div class="simple-profile__content">
 				<div class="simple-profile__title">Adeline Tate (Residential)</div>
 				<div class="simple-profile__meta">andrew@cyrcle.io</div>
 			</div>
 		</div>
-		<div class="aside__body">
-			{% include 'partials/components/_details.html' %}
+		<div class="aside__body" data-tabs>
+			<div class="aside__controls">
+				<button class="aside__control" data-tabs-control="personal">Personal</button>
+				<button class="aside__control" data-tabs-control="pickups">Pickups</button>
+			</div>
+			<div class="aside__container" data-tabs-content="personal">
+				<div class="headline aside__headline">
+					<div class="headline__title">User Details</div>
+					<div class="headline__meta">This is all the info about this customer</div>
+				</div>
+				{% include 'partials/components/_details.html' %}
+			</div>
+			<div class="aside__container" data-tabs-content="pickups">
+				<div class="headline aside__headline">
+					<div class="headline__title">Pickup History</div>
+					<div class="headline__meta">The full list of segments step-by-step</div>
+				</div>
+				{% include 'partials/components/_history.html' %}
+			</div>
 		</div>
 		<div class="aside__footer">
 			<button class="btn aside__disable">Disable</button>
-			<button class="btn btn_green aside__enable">Enable</button>
+			<button class="btn btn_green aside__enable is-hidden">Enable</button>
 		</div>
 	</div>
 </div>
