--- a/src/sass/components/_details-list.sass
+++ b/src/sass/components/_details-list.sass
@@ -22,5 +22,19 @@
 		position: absolute
 		top: 0
 		right: 0
+		padding-left: 11px
 		color: $iris
+		background: none
+		text-transform: uppercase
 		+f(13px, 600, 1.7)
+	&__edit,
+	&__label,
+	&__value,
+	&__value:before
+		padding-top: 9px
+		padding-bottom: 9px
+	&__btn-icon
+		position: absolute
+		right: 0
+		top: 0
+		display: none
