--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -1,4 +1,5 @@
 {% import "partials/mixins/_mixins.html" as mixins %}
+{% import "partials/mixins/_btn-icon.html" as btnIcon %}
 <!doctype html>
 <html>
   <head>
