--- a/src/templates/partials/components/_details.html
+++ b/src/templates/partials/components/_details.html
@@ -17,6 +17,14 @@
 				<div class="details-list__label">{{item.label}}:</div>
 				<div class="details-list__value">{{item.value}}</div>
 				<button class="details-list__edit">edit</button>
+				<div class="details-list__select">
+					<select class="select" style="width: 100%">
+						<option>Bi-weekly</option>
+						<option>Bi-weekly1</option>
+						<option>Bi-weekly2</option>
+					</select>
+				</div>
+				<button class="btn-icon details-list__btn-icon">{{mixins.icon('check')}}</button>
 			</li>
 		{% endfor %}
 	</ul>
