--- a/src/sass/components/_aside.sass
+++ b/src/sass/components/_aside.sass
@@ -1,5 +1,12 @@
 .aside
 	padding: 20px 30px
+	+lg 
+		padding: 40px 20px
+	&__inner
+		+lg
+			margin: 0 auto
+			max-width: 754px
+			+clr
 	&__simple-profile
 		margin-bottom: 24px
 	&__controls
