--- a/src/templates/partials/mixins/_mixins.html
+++ b/src/templates/partials/mixins/_mixins.html
@@ -1,3 +1,13 @@
 {% macro icon(i, classList) %}
 <svg class="icon icon-{{i}} {{classList}}"><use xlink:href="img/sprite.svg#icon-{{i}}"></use></svg>
 {% endmacro %}
+
+{% macro select(props) %}
+<div class="select">
+	<select>
+		{% for item in props.options %}
+			<option value="{{item}}">{{item}}</option>
+		{% endfor %}
+	</select>
+</div>
+{% endmacro %}
