add btn-icon arrow

--- a/src/sass/components/_btn-icon.sass
+++ b/src/sass/components/_btn-icon.sass
@@ -4,6 +4,7 @@
 	border-radius: 5px
 	background: $iris
 	+vertical
-	&__icon
+	.icon
 		display: inline-block
 		vertical-align: middle
+		font-size: 15px
