--- a/src/templates/partials/components/_details.html
+++ b/src/templates/partials/components/_details.html
@@ -11,11 +11,16 @@
 	</div>
 	<ul class="details-list">
 		{% for item in [
-			{label: 'Frequency', value: 'Weekly'}
+			{
+				label: 'Frequency',
+				value: 'Weekly',
+				btnIconOptions: {classList: 'details-list__btn-icon'}
+			}
 		] %}
 			<li class="details-list__item">
 				<div class="details-list__label">{{item.label}}:</div>
 				<div class="details-list__value">{{item.value}}</div>
+				{{btnIcon.call(item.btnIconOptions)}}
 				<button class="details-list__edit">edit</button>
 				<div class="details-list__select">
 					<select class="select" style="width: 100%">
