--- a/src/sass/components/_btn-icon.sass
+++ b/src/sass/components/_btn-icon.sass
@@ -4,7 +4,7 @@
 	border-radius: 5px
 	background: $iris
 	+vertical
-	.icon
+	&__check
 		display: inline-block
 		vertical-align: middle
 		font-size: 15px
