--- a/src/templates/partials/components/_details.html
+++ b/src/templates/partials/components/_details.html
@@ -14,6 +14,7 @@
 			{
 				label: 'Frequency',
 				value: 'Weekly',
+				edit: true,
 				btnIconOptions: {classList: 'details-list__btn-icon'}
 			}
 		] %}
@@ -21,15 +22,12 @@
 				<div class="details-list__label">{{item.label}}:</div>
 				<div class="details-list__value">{{item.value}}</div>
 				{{btnIcon.call(item.btnIconOptions)}}
-				<button class="details-list__edit">edit</button>
+				{% if item.edit %}
+					<button class="details-list__edit">edit</button>
+				{% endif %}
 				<div class="details-list__select">
-					<select class="select" style="width: 100%">
-						<option>Bi-weekly</option>
-						<option>Bi-weekly1</option>
-						<option>Bi-weekly2</option>
-					</select>
+
 				</div>
-				<button class="btn-icon details-list__btn-icon">{{mixins.icon('check')}}</button>
 			</li>
 		{% endfor %}
 	</ul>
