--- a/src/sass/components/_btn-icon.sass
+++ b/src/sass/components/_btn-icon.sass
@@ -4,6 +4,8 @@
 	border-radius: 5px
 	background: $iris
 	+vertical
+	&:disabled
+		opacity: 0.5
 	.icon
 		display: inline-block
 		vertical-align: middle
