--- a/src/sass/components/_simple-profile.sass
+++ b/src/sass/components/_simple-profile.sass
@@ -1,4 +1,9 @@
 .simple-profile
+	.is-disabled &
+		.simple-profile
+			&__title,
+			&__meta
+				text-decoration: line-through
 	&__img
 		float: left
 		border-radius: 50%
